--- a/404.html
+++ b/404.html
@@ -4,10 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>404 Not Found</title>
-  <script>
-    // Redirect to the index.html page with the current path
-    window.location.href = window.location.pathname;
-  </script>
+  <meta http-equiv="Refresh" content="0; URL=https://theengineerone.github.io/">
 </head>
 <body>
   <p>Redirecting...</p>
